disappearing border on mobile fixed with increased border width

--- a/css/projects-style.css
+++ b/css/projects-style.css
@@ -182,9 +182,9 @@ p {
         display: flex;
     }
 
-    .card {
+    /* .card {
         width: 200px;
-    }
+    } */
 
     .proj-title {
         font-size: 16px;
